<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
 	android:orientation="vertical" >
 	<Button
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:onClick="onClick"
 	    android:id="@+id/bt_auto_test"
 	    android:text="@string/bt_auto_test"/>
 	<Button
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:id="@+id/bt_manual_test"
 	    android:onClick="onClick"
 	    android:text="@string/bt_manual_test"/>
 	<Button
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:id="@+id/bt_test_report"
 	    android:onClick="onClick"
 	    android:text="@string/bt_test_report"/>
 	<Button
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:id="@+id/bt_reboot"
 	    android:onClick="onClick"
 	    android:text="@string/bt_reboot"/>
 </LinearLayout>

