<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   
    android:padding="3dip"
    android:background="@color/floralwhite">
<LinearLayout 
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:padding="3dip">
    <RelativeLayout 
        android:layout_width="match_parent"
         android:layout_height="wrap_content">
    	<TextView 
	         android:text="@string/_version" 
	         android:textSize="30.0dip"
	         android:layout_marginTop="15dp"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_gravity="center_vertical"
	         android:layout_centerInParent="true"
	         android:textColor="@color/black"
	         android:gravity="center_horizontal"
         	 android:background="@drawable/title" />
      </RelativeLayout>
    
<TableLayout        
    android:id="@+id/table1" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:padding="3dip"
   android:shrinkColumns="1"> 
    <TableRow android:layout_marginTop="5dp">
        <TextView android:text="@string/devicemodel"  
	        android:textSize="15.0dip"/>  
	    <TextView android:id="@+id/_textview_devicemodel"
	         android:layout_height="match_parent"  
	         android:layout_width="wrap_content"
	         android:textSize="15.0dip"/>  
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView android:text="@string/modem_version" 	         
	        android:textSize="15.0dip"/>  
	    <TextView android:id="@+id/text_Modem"
	         android:layout_height="match_parent"  
	         android:layout_width="wrap_content"
	         android:textSize="15.0dip"/>  
    </TableRow>

     <TableRow  android:layout_marginTop="5dp"> 
	    <TextView android:text="@string/android_os"  
	        android:textSize="15.0dip"/>  
	    <TextView android:id="@+id/textview_android_os"
	         android:layout_height="match_parent"  
	         android:layout_width="wrap_content"
	         android:textSize="15.0dip"/>  
    </TableRow> 
   

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	     <TextView 
	         android:text="@string/_CPU" 
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/text_CPU"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
	    
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView 
	         android:text="@string/_mainband" 	         
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/text_board"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
    </TableRow>

    <TableRow android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/sw_ver_"
            android:textSize="15.0dip" />
        <TextView
            android:id="@+id/sw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15.0dip" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp"
        android:stretchColumns="1" >
	    <TextView 
	         android:text="@string/_HardVersion" 	         
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/text_hard"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
	     <TextView 
	         android:text="@string/_baseBand" 
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/text_INCREMENTAL"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView 
	         android:text="@string/_firmwareVersion" 	         
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/text_firmware"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow_Kernal"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView 
	         android:text="@string/_kernal" 	         
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/Kernal_text"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView 
	         android:text="@string/_brand_o" 	         
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/text_brand"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
    </TableRow>

    <TableRow
        android:id="@+id/tableRow11"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	     <TextView 
	         android:text="@string/_operator" 
	          android:textSize="15.0dip"/>  
	    <TextView 
	        android:id="@+id/text_MANUFACTURER"
	        android:layout_height="match_parent" 
	        android:layout_width="fill_parent"
	        android:textSize="15.0dip"/>  
    </TableRow>
    
    

     <View android:layout_height="2dip"  
         android:layout_width="fill_parent" 
  		 android:background="@color/darksalmon" />   
    
    <TableRow
        android:layout_marginTop="5dp"
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>
 
    <TableRow > 
	    <TextView android:text="@string/imei1_" 
	         android:textSize="15.0dip"/>  
	    <TextView android:id="@+id/imei1" 
	        android:layout_height="match_parent" 
	        android:layout_width="wrap_content"
	        android:textSize="15.0dip"/>  
    </TableRow>
    
    <TableRow android:layout_marginTop="5dp"> 
	     <TextView android:text="@string/imie2_" 
	          android:textSize="15.0dip"/>  
	    <TextView android:id="@+id/imei2" 
	        android:layout_height="match_parent"
	         android:layout_width="wrap_content"
	         android:textSize="15.0dip"/>  
    </TableRow>

    <TableRow android:layout_marginTop="5dp" >

        <TextView
            android:text="@string/bt_addr_"
            android:textSize="15.0dip" />
        <TextView
            android:id="@+id/btaddrc"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15.0dip" />
    </TableRow>

    <TableRow android:layout_marginTop="5dp" >
        <TextView
            android:text="@string/wifi_mac_"
            android:textSize="15.0dip" />
        <TextView
            android:id="@+id/wifimac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15.0dip" />
    </TableRow>

     <TableRow
         android:id="@+id/tableRow7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp" >
         <TextView
             android:text="@string/wifi_ip_text"
             android:textSize="15.0dip" />
         <TextView
             android:id="@+id/wifiip"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="15.0dip" />
     </TableRow> 
     
     <TableRow
         android:id="@+id/tableRow_serial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp" >
         <TextView
             android:text="@string/_serial"
             android:textSize="15.0dip" />
         <TextView
             android:id="@+id/serial_text"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="15.0dip" />
     </TableRow> 
    
    <TableRow android:layout_marginTop="5dp"> 
	     <TextView android:text="@string/bulidtime_" 
			 android:textSize="15.0dip"/>  
	    <TextView android:id="@+id/bulidtime" 
	        android:layout_height="match_parent"
	         android:layout_width="wrap_content"
	         android:textSize="15.0dip"/>  
    </TableRow> 
    <View android:layout_height="2dip"  
         android:layout_width="fill_parent" 
  		 android:background="@color/darksalmon" />   
  		 
  </TableLayout> 
</LinearLayout> 
</ScrollView>
    
